<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="50dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="50dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/Descripcion" />

    <!-- NUEVOS BOTONES DE ARCHIVOS -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="15dp">

        <ImageButton
            android:id="@+id/btnDocumento"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/maquillaje"
            android:src="@drawable/documento"/>

        <ImageButton
            android:id="@+id/btnImagen"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/maquillaje"
            android:src="@drawable/imagen"/>

        <ImageButton
            android:id="@+id/btnAudio"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/maquillaje"
            android:src="@drawable/audio"/>

        <ImageButton
            android:id="@+id/btnVideo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/maquillaje"
            android:src="@drawable/video" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/maquillaje"
            android:text="@string/Volver"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/maquillaje"
            android:text="@string/Guardar"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>
